--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 /* FUENTE DE LETRA DEL BODY */
 body{
-font-family: Arial,Helvetica,sans-serif;
+font-family: 'Poppins', sans-serif;;
 width:100%;
 }
 /* FUENTE DE LETRA DEL NAV */
